--- a/Style/style.css
+++ b/Style/style.css
@@ -21,12 +21,18 @@ h1 {
 }
 
 .form-control {
-    color: #B5B5B5;
+    color: #ffffff;
     background-color: #24353f;
 }
 
 .form-control::placeholder {
     color: #B5B5B5;
+}
+
+.form-control:focus {
+    color: #ffffff;
+    --bs-body-bg: #24353f
+    background-color: var(--bs-body-bg);
 }
 
 span:hover {
